<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".myapplication.Fragments.StatisticFragment">
    <RelativeLayout
        android:layout_marginTop="5sp"
        android:id="@+id/statistics_navigations_buttons"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <Button
            android:id="@+id/profile_stats_personal_button"
            android:layout_alignParentStart="true"
            android:maxWidth="100sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalstats"
            android:background="@drawable/statistickbuttonshape">
        </Button>
        <Button
            android:id="@+id/profile_stats_team_stats"
            android:layout_centerInParent="true"
            android:text="@string/teamstats"
            android:background="@drawable/statistickbuttonshape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100sp">
        </Button>
        <Button
            android:id="@+id/profile_stats_overall_stats"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100sp"
            android:background="@drawable/statistickbuttonshape"
            android:text="@string/overallstats">
        </Button>
    </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/profile_stats_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">
            </androidx.recyclerview.widget.RecyclerView>
        </ScrollView>
        <LinearLayout
            android:visibility="visible"
            android:id="@+id/profile_statistics_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/BluePrimary"
                android:text="@string/totalstepstoday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/profile_statistics_steps_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:textColor="@color/BluePrimary"
            android:text="@string/totalstepsthisweek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/profile_statistics_steps_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:textColor="@color/BluePrimary"
            android:text="@string/totalstepsthismonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
           android:id="@+id/profile_statistics_steps_motch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:textColor="@color/BluePrimary"
            android:text="@string/totalstepsthisYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/profile_statistics_steps_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>


</LinearLayout>