<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_marginStart="30sp"
    android:layout_marginEnd="20sp"
    android:gravity="center"
    tools:context=".myapplication.Fragments.TabletActivityFragment">
    <Button
        android:id="@+id/tablet_start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/startbutton"
        android:textSize="20dp"
        android:textColor="@color/BlueAccent">
    </Button>
    <LinearLayout
        android:id="@+id/tablet_pausefinishlayout"
        android:visibility="visible"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:background="@drawable/tabletlinearlayoutshape"
        android:layout_height="wrap_content">
        <Button

            android:id="@+id/table_pause_button"
            android:text="@string/pausebutton"
            android:textColor="@color/BlueAccent"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:background="@drawable/buttonshape2"
            android:layout_height="wrap_content">
        </Button>

        <ImageButton
            android:id="@+id/table_lock_button"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/padlockbuttonshape"
            android:maxWidth="50dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

        </ImageButton>
        <Button
            android:id="@+id/tablet_finish_button"
            android:background="@drawable/finishbuttonshape"
            android:textColor="@color/BlueAccent"
            android:text="@string/finishbutton"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>
    <LinearLayout
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/table_totaltime"
            android:textColor="@color/BluePrimary"
            android:textSize="17sp"
            android:gravity="center"
            android:text="00:00"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3">

        </TextView>
        <TextView
            android:id="@+id/tablet_totaldistance"
            android:textColor="@color/BluePrimary"
            android:textSize="17sp"
            android:text="00:00"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:textSize="23sp"
            android:textColor="@color/BluePrimary"
            android:text="@string/totaltime"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:textSize="23sp"
            android:textColor="@color/BluePrimary"
            android:gravity="end"
            android:text="@string/totaldistance"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tablet_totalsteps"
            android:textColor="@color/BluePrimary"
            android:textSize="17sp"
            android:gravity="center"
            android:text="0"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3">

        </TextView>
        <TextView
            android:id="@+id/table_totalcalories"
            android:textColor="@color/BluePrimary"
            android:textSize="17sp"
            android:text="0"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="23sp"
            android:textColor="@color/BluePrimary"
            android:text="@string/totalsteps"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:textSize="23sp"
            android:textColor="@color/BluePrimary"
            android:gravity="end"
            android:text="@string/totalcalories"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>
    <TextView
        android:id="@+id/tablet_membersteam"
        android:textSize="23sp"
        android:textColor="@color/BluePrimary"
        android:layout_marginTop="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/member">
    </TextView>
    <TextView
        android:id="@+id/tablet_members"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/BluePrimary"
        android:text="aleksandar \naleksandar"
        android:layout_height="wrap_content">
    </TextView>

</LinearLayout>