<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".myapplication.Fragments.MobileActivityFragment"
    android:layout_marginTop="20sp"
    android:layout_marginStart="20sp"
    android:layout_marginEnd="20sp">
    <Button
        android:id="@+id/mobile_start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/startbutton"
        android:textSize="20dp"
        android:textColor="@color/BlueAccent">
    </Button>
    <LinearLayout
        android:visibility="visible"
        android:id="@+id/mobile_pausefinishlayout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:background="@drawable/tabletlinearlayoutshape"
        android:layout_height="wrap_content">
        <Button

            android:id="@+id/mobile_pause_button"
            android:text="@string/pausebutton"
            android:textColor="@color/BlueAccent"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:background="@drawable/buttonshape2"
            android:layout_height="wrap_content">
        </Button>

        <ImageButton
            android:id="@+id/mobile_lock_button"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/padlockbuttonshape"
            android:maxWidth="50dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

        </ImageButton>
        <Button
            android:id="@+id/mobile_finish_button"
            android:background="@drawable/finishbuttonshape"
            android:textColor="@color/BlueAccent"
            android:text="@string/finishbutton"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>
    <LinearLayout
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/mobile_totaltime"
            android:textColor="@color/BluePrimary"
            android:textSize="17sp"
            android:gravity="center"
            android:text="00:00"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3">

        </TextView>
        <TextView
            android:id="@+id/mobile_totaldistance"
            android:textColor="@color/BluePrimary"
            android:textSize="17sp"
            android:text="00:00"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:textSize="23sp"
            android:textColor="@color/BluePrimary"
            android:text="@string/totaltime"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:textSize="23sp"
            android:textColor="@color/BluePrimary"
            android:gravity="end"
            android:text="@string/totaldistance"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/mobile_totalsteps"
            android:textColor="@color/BluePrimary"
            android:textSize="17sp"
            android:gravity="center"
            android:text="0"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3">

        </TextView>
        <TextView
            android:id="@+id/mobile_totalcalories"
            android:textColor="@color/BluePrimary"
            android:textSize="17sp"
            android:text="0"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
          <TextView
            android:textSize="23sp"
            android:textColor="@color/BluePrimary"
            android:text="@string/totalsteps"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:textSize="23sp"
            android:textColor="@color/BluePrimary"
            android:gravity="end"
            android:text="@string/totalcalories"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <TextView
        android:id="@+id/mobile_members"
        android:textSize="23sp"
        android:layout_marginTop="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/member"
        android:textColor="@color/BluePrimary">
    </TextView>
    <com.mapbox.mapboxsdk.maps.MapView
        mapbox:mapbox_cameraZoom="15"
        mapbox:mapbox_cameraBearing="34.33"
        mapbox:mapbox_cameraTilt="50.25"
        android:id="@+id/mobile_mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.mapbox.mapboxsdk.maps.MapView>
</LinearLayout>
