<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlueAccent"
    android:orientation="vertical"
    android:layout_marginEnd="14sp"
    android:layout_marginStart="14sp"
    tools:context=".myapplication.Fragments.UserProfileFragment">
    <ImageView
        android:id="@+id/profile_imageview"
        android:src="@drawable/padlock"
        android:adjustViewBounds="true"
        android:layout_marginTop="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="150sp"
        android:layout_gravity="center_horizontal"
        android:maxHeight="150sp">
    </ImageView>
    <TextView
        android:id="@+id/profile_first_name"
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/BluePrimary"
        android:text="ime"
        android:layout_gravity="center_horizontal">
    </TextView>
    <TextView
        android:id="@+id/profile_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1sp"
        android:textSize="25sp"
        android:textColor="@color/BluePrimary"
        android:text="prezime"
        android:layout_gravity="center_horizontal">
    </TextView>
    <LinearLayout
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/BluePrimary"
            android:textSize="25sp"
            android:text="@string/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:textColor="@color/BluePrimary"
            android:textSize="25sp"
            android:id="@+id/profile_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/BluePrimary"
            android:textSize="25sp"
            android:text="@string/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:textColor="@color/BluePrimary"
            android:textSize="25sp"
            android:id="@+id/profile_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:textColor="@color/BluePrimary"
            android:textSize="25sp"
            android:text="@string/county"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:textColor="@color/BluePrimary"
            android:textSize="25sp"
            android:id="@+id/profile_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView

            android:textColor="@color/BluePrimary"
            android:textSize="25sp"
            android:text="@string/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:textColor="@color/BluePrimary"
            android:textSize="25sp"
            android:id="@+id/profile_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/BluePrimary"
            android:text="@string/gender" >
        </TextView>
        <TextView
            android:textColor="@color/BluePrimary"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_gender">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/total_steps_today"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:textSize="30sp"
            android:text="@string/totalstepstoday"
            android:textColor="@color/BluePrimary"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_alignBottom="@+id/total_steps_today"
            android:text="10000"
            android:id="@+id/profile_total_steps_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/BluePrimary">
        </TextView>
    </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/user_profile_statistic_button"
                android:layout_marginBottom="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:background="@drawable/statistickbuttonshape"
                android:textColor="@color/BluePrimary"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seeyourstatistic"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true">
        </Button>
        </RelativeLayout>
</LinearLayout>